fix: overflow for game waiting room changed to auto

--- a/public/styles.css
+++ b/public/styles.css
@@ -29,6 +29,7 @@
   padding-top: 2%;
   width: 100%;
   height: 75%;
+  overflow: hidden;
 }
 
 .div {
@@ -93,7 +94,7 @@ body {
 
 html,
 body {
-  overflow: hidden;
+  overflow: auto;
   width: 100%;
   height: 100%;
   margin: 0;
